--- a/package.json
+++ b/package.json
@@ -6,19 +6,49 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install",
+    "eslint": "eslint --ext .js,.jsx,.ts,.tsx --fix .",
+    "pre-commit": "lint-staged"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.3.1",
+    "@tanstack/react-query": "^4.4.0",
+    "clsx": "^1.2.1",
+    "framer-motion": "^7.3.6",
     "next": "12.3.1",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.36.0",
+    "react-hot-toast": "^2.4.0",
+    "sass": "^1.55.0"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
     "eslint": "8.23.1",
     "eslint-config-next": "12.3.1",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "prisma": "^4.3.1",
     "typescript": "4.8.3"
-  }
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "npx prettier --write"
+    ],
+    "*.{json,md,yaml,yml,scss,css}": [
+      "npx prettier --write"
+    ],
+    "*.ts": "eslint --cache --fix"
+  },
+  "license": "MIT"
 }
