--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
     "@tanstack/react-query": "^4.4.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "framer-motion": "^7.3.6",
     "next": "12.3.1",
