--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "studio": "npx prisma studio",
     "lint": "next lint",
     "prepare": "husky install",
     "eslint": "eslint --ext .js,.jsx,.ts,.tsx --fix .",
