--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.4",
     "@prisma/client": "^4.3.1",
+    "@stripe/react-stripe-js": "^1.12.0",
+    "@stripe/stripe-js": "^1.38.1",
     "@tanstack/react-query": "^4.4.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
@@ -26,7 +28,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.0",
     "react-hot-toast": "^2.4.0",
-    "sass": "^1.55.0"
+    "sass": "^1.55.0",
+    "stripe": "^10.12.0"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
