--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     "eslint-config-next": "12.3.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "feed": "^4.2.2",
+    "globby": "^13.1.2",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "prisma": "^4.3.1",
+    "sitemap": "^7.1.1",
     "typescript": "4.8.3"
   },
   "lint-staged": {
